# const-arithmetic

./: Cargo.toml  LICENSE  README.md  a.ipynb  changelog.md
const-arith-macros/: Cargo.toml  LICENSE  README.md
const-arith-macros/src/: lib.rs
src/: a.ipynb  add.rs  binary.rs  equal.rs  hex.rs  integer.rs  lib.rs  main.rs  test.rs
src/hex/: add.rs  equal.rs
src/integer/: division.rs  impls.rs  psuedocode.py
tests/: test.rs
