[package]
name = "const-arithmetic"
version = "1.0.0"
edition = "2021"
authors = ["Darin Chau <yfdchau@connect.ust.hk>"]
license-file = "LICENSE"
keywords = ["const", "generics", "compile-time", "integer", "arithmetic"]
categories = ["algorithms", "mathematics"]
description = "Exploits Rust's type generic system to perform integer arithmetics at compile time."
homepage = "https://github.com/darinchau/const-arithmetic"
repository = "https://github.com/darinchau/const-arithmetic"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-arith-macros-178 = { version = "~0.1.0", path = "./const-arith-macros"}
