[package]
# This package is named in such a weird way to avoid name clash - in case someone somewhere sometime in the future wants const-arith-macros
name = "const-arith-macros178"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.82", features = ["full", "extra-traits"] }
